tests/function/extra_args.rev
fn f(a, b) {
    print a
    print b
}

f(1, 2, 3, 4) // error: wrong arguments number: expected 2 but got 4